# stunnel-android

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  configure  configure.ac  configure~
doc/: Makefile.in  stunnel.8.in  stunnel.html.in  stunnel.pl.8.in  stunnel.pl.html.in
java/: Stunnel.java
src/: Makefile.am  Makefile.in  dhparam.c  jnicalls.h  log.c  ssl.c  stunnel.c
tests/: Makefile.in
tests/certs/: Makefile.in
tools/: Makefile.in
vars/: android-sdk-path  vars-arm64-v8a  vars-armeabi-v7a  vars-x86  vars-x86_64
